# mini-dns-rs

./: Cargo.toml  README.md  query_packet.txt  response_packet.txt
src/: dns_header.rs  dns_packet.rs  dns_question.rs  dns_record.rs  errors.rs  lib.rs  main.rs  packet_buffer.rs  query_type.rs
